--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="play">
                             <img src="images/cards/play2.png" alt="" />
                         </div>
-                        <img src="images/cards/Devotional.jpeg" alt="" />
+                        <img src="images/cards/devotional.jpeg" alt="" />
                         <h3>Devotional songs</h3>
                         <p></p>
                     </div>
